--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
               eiusmod tempor incident ut labore et dolore magna aliqua
             </li>
-            <li>+234-814-510-2639</li>
-            <li>princeganiuadebayo@gmail.com</li>
+            <li>+234-817-944-5963</li>
+            <li>pg638195@gmail.com</li>
           </ul>
 
           <ul>
